# cookiecutter-pypackage

./: README.md  cookiecutter.json
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.project_slug}}/: .gitignore  LICENSE  MANIFEST.in  README.md  setup.cfg  tox.ini
{{cookiecutter.project_slug}}/docs/: conf.py
