[metadata]
name = {{cookiecutter.project_slug}}
version = attr: {{cookiecutter.project_slug}}.__version__
url = https://github.com/chlorochrule/{{cookiecutter.project_slug}}
author = chlorochrule
author_email = minami.polly@gmail.com
license_file = LICENSE
classifiers =
  Programming Language :: Python :: 3.8
long_description = file: README.md
long_description_content_type = text/markdown
setup_requres =
  pytest-runner
tests_require =
  pytest

[options]
package = find:
install_requires =
  # dependencies

[options.package.find]
exclude =
  tests

# [options.entry_points]
# console_scripts =
#   cmd = {{cookiecutter.project_slug}}.module:function

[aliases]
test = pytest

[tool:pytest]
testpaths = tests
python_files = test_*.py

